@@ -1,3 +1,8 @@
+2010-06-28  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclPosixStr.c   [Bug 3019634] errno.h and tclWinPort.h have
+	conflicting definitions.
+
 2010-06-09  Andreas Kupries  <andreask@activestate.com>
 
 	* library/platform/platform.tcl: Added OSX Intel 64bit
